--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body style="background-color:#1e1e1e;">
    
 	<a href="file:///C:/Users/hp/Desktop/MV_HTML/index.html">
-	<img src="images/main_menu.png"> </a>
+	<img src="main_menu.png"> </a>
 
 
 	<h1 style="color:#680b08;font-family:verdana;text-align:center;"> The Supra MK1(1978-1981) </h1>
