--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body style="background-color:#1e1e1e;">
    
-	<a href="file:///C:/Users/hp/Desktop/MV_HTML/index.html">
+	<a href="https://mvmv-7002.github.io/MV_III3.github.io/">
 	<img src="main_menu.png"> </a>
 
 
