--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>The Supra Through The Years</title>
  <style>
     body {
-	background-image: url("images/bck.png");
+	background-image: url("bck.png");
   	background-repeat: no-repeat;
   	background-attachment: fixed;  
   	background-size: cover;
