--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 	<h1 style="color:#680b08;font-family:verdana;text-align:center;"> The Supra MK1(1978-1981) </h1>
 
-	<p style="color:#680b08;font-family:verdana;font-size:150%">
+	<p style="color:#680b08;font-family:verdana;font-size:150%;text-align:center;">
         Introduction: The first-generation Supra debuted as a variant of the Toyota Celica, marking its shift into the luxury sportscar territory.<br><br>
         Engine: Initially equipped with a 2.0L straight-six engine, it was one of the few cars at the time to feature a six-cylinder engine in this category.<br><br>
 	Key Features: The A40 had a more refined look than the Celica, with its longer wheelbase, more powerful engine, and improved suspension.
